# Strategy

./: README.md  Scheme.drawio  project.txt
Strategy/: CMakeLists.txt  ColoredString.h  Colorize.h  Drawer.h  FractionChoose.h  Handleable.h  InputDecorator.cpp  InputDecorator.h  MainHandler.cpp  MainHandler.h  Map.cpp  Map.h  MapInit.cpp  MapInit.h  Movable.h  MyUtilite.h  MyUtility.cpp  MyUtility.h  Named.h  PhysicalObject.h  Swordmen.h  Unit.h  Warrior.h  main.cpp
Strategy/AbstractUnits/: Archer.h  Archery.cpp  Archery.h  Barracks.h  Building.cpp  Building.h  Horseman.h  InSquadUnit.h  PhysicalSquad.cpp  PhysicalSquad.h  SquadArcher.h  SquadHorseman.h  SquadSwordsman.h  Stable.h  Swordman.h  Swordsman.h  TownHall.h  Townhall.h  Unit.h  Warrior.h  Worker.cpp  Worker.h
Strategy/DrawTools/: ColoredString.cpp  ColoredString.h  Colorize.cpp  Colorize.h  DrawInterface.cpp  DrawInterface.h  Drawer.h
Strategy/Factory/: EnemyFactory.h  EnglandFactory.cpp  EnglandFactory.h  Factory.cpp  Factory.h  FranceFactory.h  MyFactory.h  Spawner.h  TypedFactory.cpp  TypedFactory.h
Strategy/Groups/: Group.h  InSquadWarrior.h  Squad.cpp  Squad.h
Strategy/Properties/: Handleable.h  Hittable.cpp  Hittable.h  Movable.cpp  Movable.h  Named.cpp  Named.h  PhysicalObject.h
