cmake_minimum_required(VERSION 3.15)
project(MyStrategy)

set(CMAKE_CXX_STANDARD 20)

add_definitions(-D_DEB_CAN_CONTROL_ENEMY)
#add_definitions(-D_DEB)

add_executable(MyStrategy
main.cpp
DrawTools/Colorize.h
AbstractUnits/Unit.h
Properties/Movable.h
Properties/PhysicalObject.h
Properties/Hittable.h
AbstractUnits/Warrior.h
AbstractUnits/Swordsman.h
MyUtility.h
Properties/Handleable.h
Map.h
MainHandler.h
Properties/Named.h
AbstractUnits/Horseman.h
AbstractUnits/Archer.h
AbstractUnits/Building.h
AbstractUnits/TownHall.h
Factory/Spawner.h
AbstractUnits/Worker.h
Factory/FranceFactory.h
Factory/EnglandFactory.h
AbstractUnits/Barracks.h
DrawTools/Drawer.h
DrawTools/ColoredString.h
Groups/InSquadWarrior.h
AbstractUnits/InSquadUnit.h
Groups/Group.h
Groups/Squad.h
AbstractUnits/PhysicalSquad.h
AbstractUnits/SquadSwordsman.h
Factory/MyFactory.h
Factory/EnemyFactory.h
FractionChoose.h
AbstractUnits/Stable.h
AbstractUnits/SquadHorseman.h
AbstractUnits/SquadArcher.h
AbstractUnits/Archery.h
Factory/Factory.h
Factory/TypedFactory.h
MapInit.h
DrawTools/DrawInterface.h
InputDecorator.h
AbstractUnits/PhysicalSquad.cpp
DrawTools/Colorize.cpp
DrawTools/ColoredString.cpp
Properties/Movable.cpp
Properties/Movable.cpp
Properties/Movable.h
Properties/Named.cpp
MyUtility.cpp
Properties/Hittable.cpp
Properties/Hittable.cpp
Properties/Hittable.h
Factory/TypedFactory.cpp
AbstractUnits/Worker.cpp
Factory/Factory.cpp
Factory/EnglandFactory.cpp
MapInit.cpp
AbstractUnits/Building.cpp
AbstractUnits/Archery.cpp
MainHandler.cpp
InputDecorator.cpp
DrawTools/DrawInterface.cpp
Map.cpp
Groups/Squad.cpp)